@startuml Use Case Diagram

left to right direction
skinparam packageStyle rectangle
skinparam handwritten true

actor User
actor Admin

rectangle "S&B Store" {
  User --> (Browse Products)
  User --> (View Product Details)
  User --> (Add to Cart)
  User --> (Checkout)
  User --> (Contact Support)
  User --> (Register Account)
  User --> (Login)
  User --> (View Orders)
  
  Admin --> (Manage Products)
  Admin --> (Manage Categories)
  Admin --> (View Contacts)
  Admin --> (Manage Users)
}

@enduml

@startuml Class Diagram

' Define classes
class User {
  +id: integer
  +name: string
  +email: string
  +password: string
  +email_verified_at: timestamp
  +remember_token: string
  +created_at: timestamp
  +updated_at: timestamp
}

class Category {
  +id: integer
  +name: string
  +created_at: timestamp
  +updated_at: timestamp
}

class Product {
  +id: integer
  +name: string
  +description: text
  +price: decimal
  +category: string
  +image: string
  +stock: integer
  +created_at: timestamp
  +updated_at: timestamp
}

class Contact {
  +id: integer
  +first_name: string
  +last_name: string
  +email: string
  +message: text
  +status: enum
  +category_id: integer
  +created_at: timestamp
  +updated_at: timestamp
}

class PasswordResetToken {
  +email: string
  +token: string
  +created_at: timestamp
}

' Define relationships
User "1" -- "0..*" Contact : submits
Category "1" -- "0..*" Contact : categorizes
User "1" -- "0..*" PasswordResetToken : requests

@enduml 